Update tests and add pagination tests